[gd_scene load_steps=3 format=3 uid="uid://c5y4c5v1mu8qm"]

[ext_resource type="Script" uid="uid://hsno3t6lystg" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="LabelSettings" id="LabelSettings_n87rw"]
font_size = 32

[node name="PauseMenu" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -10.0
offset_right = 14.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_n87rw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Game"

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
